# ResumeForge

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.ps1  run.sh  skill.json  skills.md  test.py
.github/workflows/: ci.yml
app/: __init__.py  cli.py  main.py  mcp_server.py
app/agent/: __init__.py  graph.py  state.py
app/features/: __init__.py  branches.py  cold_read.py  gap_finder.py  receipt.py  roast.py  tailor.py
docs/: ARCHITECTURE.md  ATS_Planner.md  DEVELOPMENT_HISTORY.md  FILE_STRUCTURE.md  IMPLEMENTATION_GUIDE.md  MASTER_PLAN.md  PROVIDERS.md  README.md  ROADMAP.md  SETUP.md  linux_setup.md
examples/: skills.md.example
inputs/: base_resume.tex  projects.md  skills.md
scripts/: format_projects_section.py
skill/: README.md  SKILL.md
test_files/: Anshuman_Jena_Detailed_Projects.md  full_example.tex  jd.txt  template.tex
tests/: conftest.py  sample_jd.txt  sample_resume.tex  test_branches.py  test_cli_json.py  test_cold_read.py  test_docx_builder.py  test_file_namer.py  test_gap_finder.py  test_github_importer.py  test_jd_url.py  test_json_utils.py  test_keypool.py  test_keyword_matcher.py  test_latex_parser.py  test_mcp_server.py  test_model_limits.py  test_openai_compatible.py  test_page_count.py  test_profile_template_builder.py  test_receipt.py  test_render_diff.py  test_resume_pdf.py  test_roast.py  test_router_token_aware.py  test_tailor.py  test_task_routing.py  test_template_registry.py  test_tex_bootstrap.py  test_validator.py
(+105 files in other folders)
