[project]
name = "resumeforge"
version = "1.0.0"
description = "Autonomous, free-tier AI agent that tailors your resume to any job description."
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
