[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resumeforge"
version = "1.0.0"
description = "Autonomous, free-tier AI agent that tailors your resume to any job description."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-cohere>=0.3.0",
    "gradio>=5.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "anthropic>=0.39.0",
    "requests>=2.31.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=7.0.0",
]

[project.optional-dependencies]
# Local stdio MCP server — `pip install "resumeforge[mcp]"`.
mcp = ["mcp>=1.2.0"]

[project.scripts]
resumeforge = "app.cli:main"
resumeforge-mcp = "app.mcp_server:main"

[tool.hatch.build.targets.wheel]
# The importable package is `app/`, not a directory named after the project.
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
